--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 .backVideo{
   opacity: 0.5;
@@ -14,11 +13,28 @@
   object-fit: cover;
   z-index: -1;
 }
-content{
-  width: fit-content;
-  height: fit-content;
+.content{
+  padding: 150px;
+  width: 100%;
+  height: 100vh;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .LeftSidebar , .RightNavigation {
   z-index: 2;
+}
+
+@media (max-width: 1200px) {
+  .mainWrapper{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 20px;
+  }
+ 
+  .content{
+    padding: 0;
+  }
+  
 }
