--- a/src/components/Content/Home/styles.module.scss
+++ b/src/components/Content/Home/styles.module.scss
@@ -1,13 +1,8 @@
 .Home{
-    width: 100%;
-    height: 100vh;
-    padding: 10%;
-}
-.mainContainer{
-    width: 100%;
+    // background-color: aqua;
+    width: 1250px;
     height: 100%;
-    padding-left: 25%;
-    padding-right: 10%;
+    padding-left: 120px;
 }
 .subtitle{
     width: fit-content;
@@ -30,12 +25,13 @@
         margin-right: 5px;
     }
 }
+
 .header{
-    width: 800px;
+    width: 100%;
     margin-bottom: 100px;
     h1{
         color: white;
-        font-size: 50px;
+        font-size: 55px;
         font-weight: 300;
     }
 }
@@ -104,5 +100,48 @@ to {
             color: gray;
             font-size: 30px;
         }
+    }
+}
+
+@media (max-width: 1800px) {
+    .Home{
+        width: 1000px;
+    }
+
+    .subtitle{
+        p{
+            font-size: 16px;
+        }
+    }
+    .facts{
+        .expirience , .projects {
+            h2{
+                color: #28e98c;
+                font-size: 50px;
+                line-height: 56px;
+                margin-bottom: 15px;
+            }
+            p{
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1400px) {
+
+    .Home{
+        width: 800px;
+    }
+    
+}
+
+@media (max-width: 1200px) {
+    .Home{
+        max-width: 700px;
+        width: 100%;
+        height: 100%;
+        padding-left: 0px;
+        padding: 60px 0px;
     }
 }
