--- a/src/components/RightNavigation/styles.module.scss
+++ b/src/components/RightNavigation/styles.module.scss
@@ -24,3 +24,8 @@ li:hover {
     height: 20px;
     padding: 15px;
 }
+@media (max-width: 1200px) {
+    .rightNavigation{
+        display: none;
+    }
+}
