--- a/src/components/Content/About/styles.module.scss
+++ b/src/components/Content/About/styles.module.scss
@@ -1,5 +1,77 @@
 .About{
-    background-color: aqua;
-    width: 100%;
-    height: 100vh;
+    width: 1250px;
+    height: 100%;
+    padding-left: 120px;
+    margin-top: 65px;
+
+    .subtitle{
+        width: fit-content;
+        height: fit-content;
+        border: 1px solid white;
+        border-radius: 20px;
+        padding: 8px;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        
+        p{
+            font-size: 20px;
+            color: white;
+        }
+        .icon{
+            color: white;
+            margin-right: 5px;
+        }
+    }
+    .header{
+        width: 100%;
+        margin-bottom: 40px;
+        h1{
+            color: white;
+            font-size: 55px;
+            font-weight: 300;
+        }
+    }
+    .aboutDescription{
+        width: 100%;
+        margin-bottom: 100px;
+        p{
+            color: gray;
+            font-size: 30px;
+            font-weight: 300;
+        }
+    }
+}
+
+
+@media (max-width: 1800px) {
+    .About{
+        width: 1000px;
+    }
+
+    .subtitle{
+        p{
+            font-size: 16px;
+        }
+    }
+}
+
+@media (max-width: 1400px) {
+
+    .About{
+        width: 800px;
+    }
+    
+}
+
+@media (max-width: 1200px) {
+    .About{
+        max-width: 700px;
+        width: 100%;
+        height: 100%;
+        padding-left: 0px;
+        padding: 60px 0px;
+    }
 }
